Correct processing/parsing of the request URL with path containing illegal characters